primitives/api/test/tests/ui/declaring_own_block_with_different_name.rs
sp_api::decl_runtime_apis! {
	pub trait Api<B: BlockT> {
		fn test();
	}
}

fn main() {}
